Fixed project name

--- a/templates/diary.html
+++ b/templates/diary.html
@@ -6,7 +6,7 @@
     <title>Расписание уроков</title>
 </head>
 <body>
-    <h1>Расписание уроков от Левочки деточки</h1>
+    <h1>Расписание уроков проект Лошкарев Л.С.</h1>
     
     {% for weekday, lessons in lessons_by_weekday.items() %}
     <h2>{{weekday}}</h2>
